--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "prettier": "^3.2.5",
     "eslint-config-next": "14.0.3",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
