--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.1",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha-v3": "^1.10.1",
