--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^20.12.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.1",
     "postcss": "^8.4.38",
